<resources>
    <string name="app_name">FYP_1</string>
    <string name="navigation_drawer_open"> Open navigation drawer</string>
    <string name="navigation_drawer_close"> Close navigation drawer</string>
    <string-array name="keep_listed_for_array">
        <item>Keep Listed For...</item>
        <item>Always</item>
        <item>1 Day</item>
        <item>2 Days</item>
        <item>3 Days</item>
        <item>4 Days</item>
        <item>5 Days</item>
        <item>6 Days</item>
        <item>1 Week</item>
        <item>2 Weeks</item>
        <item>3 Weeks</item>
        <item>1 Month</item>
    </string-array>

    <string-array name="food_category_array">
        <item>Category...</item>
        <item>Dairy</item>
        <item>Meat/Poultry</item>
        <item>Fish</item>
        <item>Cupboard</item>
        <item>Bread/Cereal</item>
        <item>Fruit</item>
        <item>Veg</item>
        <item>Freezer</item>
    </string-array>

    <string-array name="item_amount_array">
        <item>Unit</item>
        <item>kg</item>
        <item>g</item>
        <item>pt</item>
        <item>oz</item>
        <item>L</item>
        <item>ml</item>
        <item>lb(s)</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>Other</item>
    </string-array>

    <string-array name="sort_array">
        <item>Latest</item>
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Category</item>

    </string-array>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_my_listings_tabbed">MyListingsTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="cereal_bread">Cereal/Bread</string>
    <string name="fruit">Fruit</string>
    <string name="vegtables">Vegtables</string>
    <string name="cupboard">Cupboard</string>
    <string name="dairy">Dairy</string>
    <string name="meat_poultry">Meat/Poultry</string>
    <string name="fish">Fish</string>
    <string name="freezer">Freezer</string>
    <string name="recipe_item">Recipe Item</string>
    <string name="missing_ingredients">Missing Ingredients:</string>
    <string name="available_ingredients">Available Ingredients : </string>
    <string name="ingredients">Ingredients</string>
    <string name="equipment">Equipment</string>
    <string name="instructions">Instructions</string>
    <string name="ingredient_list">Ingredient list</string>
    <string name="method">Method</string>
    <string name="steps">Steps</string>
    <string name="equipment_list">Equipment List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_new_account">Create new account</string>
    <string name="forget_password">forget password</string>
    <string name="loading">Loading</string>
    <string name="brackets">()</string>
    <string name="for_home_cooking">for Home Cooking</string>
    <string name="check_items_to_search_for_recipe">Check items to search for recipe</string>
    <string name="got_it">Got It!</string>
    <string name="barcode_item">Barcode Item</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="expiry_date_title">Expiry Date:</string>
    <string name="pick_up_times_e_g_evenings_only">Pick Up Times (e.g. Evenings only)</string>
    <string name="pick_up_times">Pick Up Times:</string>
    <string name="pick_up_location">Pick-Up Location</string>
    <string name="pick_up_location_title">Pick-Up Location:</string>
    <string name="category">Category</string>
    <string name="category_title">Category:</string>
    <string name="description">Description</string>
    <string name="description_title">Description:</string>
    <string name="title">Title</string>
    <string name="title_title">Title:</string>
    <string name="log_out">Log Out</string>
    <string name="available_listing">Available Listing</string>
    <string name="i_have">I Have</string>
    <string name="don_t_have">Don\'t Have</string>
    <string name="close">Close</string>
    <string name="filter">Filter</string>
    <string name="title_activity_map_to_shop">Map</string>
    <string name="request">Request</string>
    <string name="chat_user">Chat User</string>
    <string name="listing_requests">Listing Requests</string>
    <string name="my_listing_requests">My Listing Requests</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="add_to_shopping_list">Add to Shopping List</string>
    <string name="number_of_requests">Number of Requests: </string>
    <string name="recipe_made_delete_ingredients_from_mykitchen">Recipe Made! Delete Ingredients from MyKitchen</string>
    <string name="set_location">Set Location</string>
</resources>