<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndRegister.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/createANewUserIV"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/register_logo"/>

    <EditText
        android:id="@+id/firstNameET"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/lastNameET"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/emailET"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/phoneET"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/confirmPasswordET"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginBottom="35dp"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_button"
        android:text="@string/register"
        app:backgroundTint="#FB9FDF"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/homePageButton"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_button"
        android:text="Back"
        app:backgroundTint="#FB9FDF"
        android:textColor="#fff"
        android:layout_gravity="center"/>
    </LinearLayout>

</ScrollView>