<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".LoginAndRegister.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/wasteifyLogoHomePage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/wasteify_big"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"/>

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="263dp"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="@string/email"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/wasteifyLogoHomePage"
            android:inputType="textEmailAddress"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="263dp"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="@string/password"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:layout_below="@+id/editTextEmailAddress"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/forgetPasswordTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_below="@+id/editTextPassword"
            android:textAllCaps="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="80dp"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="269dp"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:text="@string/log_in"
            android:textColor="#fff"
            app:backgroundTint="#FB9FDF"
            android:layout_below="@+id/forgetPasswordTV"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/createNewAccountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textAllCaps="true"
            android:layout_marginTop="5dp"
            android:layout_below="@id/loginBtn"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>
</ScrollView>