<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileAndListings.ViewMyFullListing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/wasteify_faded_yellow"
                android:orientation="horizontal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/fullListingDisplayImage1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_baseline_add_circle_outline_24" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/fullListingDisplayTitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/suravaram"
                    android:text="@string/title"
                    android:textColor="#0B0A0A"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fListingDisplayDescription1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullListingDisplayTitle1"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:maxLength="250"
                    android:text="@string/description_title"
                    android:textColor="#0B0A0A"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/fullListingDisplayDescription1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fListingDisplayDescription1"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:maxLength="250"
                    android:text="@string/description"
                    android:textColor="#0B0A0A"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fListingDisplayCategory1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullListingDisplayDescription1"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/category_title"
                    android:textColor="#0B0A0A"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fullListingDisplayCategory1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fListingDisplayCategory1"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/category"
                    android:textColor="#0B0A0A"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fListingDisplayLocation1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullListingDisplayCategory1"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/pick_up_location_title"
                    android:textColor="#0B0A0A"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fullListingDisplayLocation1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fListingDisplayLocation1"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/pick_up_location"
                    android:textColor="#0B0A0A"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fListingDisplayPickUpTimes1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullListingDisplayLocation1"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:maxLength="100"
                    android:text="@string/pick_up_times"
                    android:textColor="#0B0A0A"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fullListingDisplayPickUpTimes1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fListingDisplayPickUpTimes1"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:maxLength="100"
                    android:text="@string/pick_up_times_e_g_evenings_only"
                    android:textColor="#0B0A0A"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fListingDisplayExpiry1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullListingDisplayPickUpTimes1"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/expiry_date_title"
                    android:textColor="#0B0A0A"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fullListingDisplayExpiry1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fListingDisplayExpiry1"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/expiry_date"
                    android:textColor="#0B0A0A"
                    android:textSize="16sp" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/requestListingBtn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/request"
                app:backgroundTint="@color/wasteify_pink" />

            <Button
                android:id="@+id/chatUserOfListingBtn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/requestListingBtn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/custom_button"
                android:text="@string/chat_user"
                app:backgroundTint="@color/wasteify_pink" />


        </RelativeLayout>


    </LinearLayout>
</ScrollView>