<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileAndListings.ViewMyFullListing">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/wasteify_faded_yellow"
                    android:orientation="horizontal" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/fullListingDisplayImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_baseline_add_circle_outline_24" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/FlistingTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:fontFamily="@font/suravaram"
                        android:text="@string/title_title"
                        android:textColor="#0B0A0A"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fullListingDisplayTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/FlistingTitle"
                        android:layout_toRightOf="@id/FlistingTitle"
                        android:fontFamily="@font/suravaram"
                        android:text="@string/title"
                        android:textColor="#0B0A0A"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fListingDisplayDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fullListingDisplayTitle"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:maxLength="250"
                        android:text="@string/description_title"
                        android:textColor="#0B0A0A"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/fullListingDisplayDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fullListingDisplayTitle"
                        android:layout_centerHorizontal="true"
                        android:layout_toEndOf="@id/fListingDisplayDescription"
                        android:layout_toRightOf="@id/fListingDisplayDescription"
                        android:maxLength="250"
                        android:text="@string/description"
                        android:textColor="#0B0A0A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fListingDisplayCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fullListingDisplayDescription"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/category_title"
                        android:textColor="#0B0A0A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fullListingDisplayCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fullListingDisplayDescription"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_toEndOf="@id/fListingDisplayCategory"
                        android:layout_toRightOf="@id/fListingDisplayCategory"
                        android:text="@string/category"
                        android:textColor="#0B0A0A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fListingDisplayLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fullListingDisplayCategory"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/pick_up_location_title"
                        android:textColor="#0B0A0A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fullListingDisplayLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fullListingDisplayCategory"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_toEndOf="@id/fListingDisplayLocation"
                        android:layout_toRightOf="@id/fListingDisplayLocation"
                        android:text="@string/pick_up_location"
                        android:textColor="#0B0A0A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fListingDisplayPickUpTimes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fullListingDisplayLocation"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:maxLength="100"
                        android:text="@string/pick_up_times"
                        android:textColor="#0B0A0A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fullListingDisplayPickUpTimes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fullListingDisplayLocation"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_toEndOf="@id/fListingDisplayPickUpTimes"
                        android:layout_toRightOf="@id/fListingDisplayPickUpTimes"
                        android:maxLength="100"
                        android:text="@string/pick_up_times_e_g_evenings_only"
                        android:textColor="#0B0A0A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fListingDisplayExpiry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fullListingDisplayPickUpTimes"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/expiry_date_title"
                        android:textColor="#0B0A0A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fullListingDisplayExpiry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fullListingDisplayPickUpTimes"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="20dp"
                        android:layout_toEndOf="@id/fListingDisplayExpiry"
                        android:layout_toRightOf="@id/fListingDisplayExpiry"
                        android:text="@string/expiry_date"
                        android:textColor="#0B0A0A"
                        android:textSize="16sp" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/fullListingDisplayEditBtn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/edit"
                    app:backgroundTint="@color/wasteify_pink" />

                <Button
                    android:id="@+id/fullListingDisplayDeleteBtn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fullListingDisplayEditBtn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="60dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/delete"
                    app:backgroundTint="@color/wasteify_pink" />


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:itemBackground="@color/wasteify_pink"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:menu="@menu/menu_navigation" />

    </RelativeLayout>
</RelativeLayout>